# T2IA-collection

./: LICENSE  README.md  T2IA-collection_diagram.puml  pyproject.toml  setup.py
t2ia_collection/: __init__.py  collection.py  content.py  detection.py  postcard.py
tests/: test_content.py  test_detection.py
