[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2ia_collection"
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
    {name = "Matthieu PELINGRE", email = "matth.pelingre@gmail.com"},
    {name = "Antoine TABBONE", email = "Antoine.Tabbone@loria.fr"},
]
description = "A Python package for managing postcard collections with detection features"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
